Fix vertical wrapped content on `Button` (#241)

--- a/styles/components/Button.scss
+++ b/styles/components/Button.scss
@@ -57,7 +57,6 @@
   position: relative;
   display: inline-block;
   white-space: nowrap;
-  line-height: var(--button-height);
   padding: 0 var(--space-m);
   margin-right: var(--space-xs);
   margin-bottom: var(--space-xs);
@@ -71,13 +70,11 @@
   }
 
   &__content {
-    display: block;
+    display: flex; // Inline flex will broke ellipsis, don't change it.
+    align-items: center;
     align-self: stretch;
-
-    &--ellipsis {
-      display: flex; // Inline flex will broke ellipsis, don't change it.
-      align-items: center;
-    }
+    min-height: var(--button-height);
+    width: fit-content;
   }
 
   .Button--icon {
@@ -108,10 +105,13 @@
 
   &--compact {
     padding: 0 var(--space-s);
-    line-height: 1.333em;
 
     &.Button--hasIcon .Button--icon {
       margin: 0 var(--space-xxs);
+    }
+
+    .Button__content {
+      min-height: calc(var(--button-height) * 0.8);
     }
   }
 
